# apus-renta

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt  run_capacitacion_tests.py  scheduler_main.py  seed_users.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_migracion_inicial.py  002_dimension_embeddings_configurable.py  003_direccion_conversaciones.py  004_capacitacion_2_0_tablas.py
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: __init__.py  fase_0_preplaneacion.py  fase_1_planeacion.py  fase_2_ejecucion.py  fase_3_informe.py  fase_4_seguimiento.py  graph.py  state.py  supervisor.py
backend/app/analytics/: __init__.py  exportador.py  metricas_auditoria.py  metricas_calidad.py  metricas_capacitacion.py  metricas_uso.py
backend/app/api/: __init__.py  admin_routes.py  agent_ws.py  analytics_routes.py  audit_routes.py  auth_routes.py  capacitacion_routes.py  chat_routes.py  config_routes.py  document_routes.py  finetuning_routes.py  format_routes.py  hallazgo_routes.py  integracion_routes.py  observatorio_routes.py  rag_routes.py  sesion_routes.py
backend/app/auth/: __init__.py  jwt_handler.py  middleware.py  rbac.py  roles.py
backend/app/finetuning/: __init__.py  dataset_builder.py  eval_model.py  merge_adapter.py  train_lora.py
backend/app/formatos/: __init__.py  formato_01_independencia.py  formato_03_datos_generales.py  (+11 more)
backend/tests/: __init__.py  conftest.py
(+324 files in other folders)
